# boilerplate

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  flake.nix
templates/general/: AGENTS.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md  SECURITY.md  STYLE.md  SUPPORT.md  flake.nix
templates/go/: .gitignore  AGENTS.md  README.md  STYLE.md  flake.nix  go.mod  main.go  main_test.go
templates/nixos-module/: AGENTS.md  CONTRIBUTING.md  README.md  STYLE.md  default.nix
templates/python/: AGENTS.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  STYLE.md  SUPPORT.md  pyproject.toml
templates/rust/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  STYLE.md  SUPPORT.md  flake.nix
templates/rust/src/: main.rs
